# svg_snip

./: .gitignore  MANIFEST.in  README.md  example.ipynb  example_animation.html  fixing_group.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
docs/: example_3D_cube.ipynb
svg_snip/: Composer.py  Elements.py  Elements3D.py  Jupyter.py
tests/: test_nested_groups_with_arrows.py
