[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "svg_snip"
dynamic = ["version"]
description = "Generate simple SVG snippets for use in Jupyter."
readme = "README.md"
requires-python = ">=3.6"
license = "Apache-2.0"
authors = [
    {name = "Andre Aichert", email = "aaichert@gmail.com"},
]
keywords = ["svg", "jupyter", "visualization", "graphics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy",
    "IPython",
    "Pillow",
]

[project.urls]
Homepage = "https://github.com/aaichert/svg_snip"
"Bug Tracker" = "https://github.com/aaichert/svg_snip/issues"
Repository = "https://github.com/aaichert/svg_snip.git"

[tool.setuptools]
packages = ["svg_snip"]

[tool.setuptools_scm]
write_to = "svg_snip/_version.py"